--- a/Trackify/app/src/main/res/layout/user_profile_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_profile_fragment.xml
@@ -34,7 +34,9 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userFollowers">
+        app:layout_constraintTop_toBottomOf="@+id/userFollowers"
+        android:background="@color/raisin_black"
+        android:theme="@style/ThemeOverlay.Material3.Dark">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
