--- a/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/mapView" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSharedRouteItems"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
