--- a/Trackify/app/src/main/res/layout/routes_search_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_search_fragment.xml
@@ -30,14 +30,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add_playlist2route"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         tools:itemCount="12" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_add_playlist2route"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
