--- a/Trackify/app/src/main/res/layout/playlists_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_landing_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="75dp"
         android:layout_height="60dp"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btnReadUserQr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -126,7 +126,7 @@
         tools:layout_editor_absoluteY="172dp" />
     -->
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCreateNewPlaylist"
         android:layout_width="246dp"
         android:layout_height="43dp"
         android:text="Create New Playlist"
