--- a/Trackify/app/src/main/res/layout/user_following_item.xml
+++ b/Trackify/app/src/main/res/layout/user_following_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:paddingStart="15dp"
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="User"
-        app:layout_constraintEnd_toStartOf="@+id/ivArrowRight"
+        app:layout_constraintEnd_toStartOf="@+id/imgBtnSeeUserFollowing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,18 +23,18 @@
         android:layout_height="wrap_content"
         android:text="Playlist"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ivArrowRight"
+        app:layout_constraintEnd_toStartOf="@+id/imgBtnSeeUserFollowing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUsename" />
 
-    <ImageView
-        android:id="@+id/ivArrowRight"
+    <ImageButton
+        android:id="@+id/imgBtnSeeUserFollowing"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:rotation="180"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?attr/actionModeCloseDrawable" />
+        app:srcCompat="@drawable/ic_arrowforward" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
