--- a/Trackify/app/src/main/res/layout/playlists_details_footer_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_details_footer_item.xml
@@ -9,11 +9,9 @@
     android:paddingStart="16dp"
     android:paddingTop="12dp"
     android:paddingEnd="16dp"
-    android:paddingBottom="8dp"
-    tools:ignore="UseCompoundDrawables">
+    android:paddingBottom="8dp">
 
     <com.apm.trackify.widgets.DottedSeparator
-        android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="2dp" />
 
@@ -31,4 +29,3 @@
         tools:text="3 Tracks · 9 Minutes" />
 
 </LinearLayout>
-
