--- a/Trackify/app/src/main/res/layout/playlists_details_header_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_details_header_item.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:lineSpacingMultiplier="0.9"
         android:text="@tools:sample/lorem"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spotify" />
@@ -44,6 +45,7 @@
         android:layout_height="wrap_content"
         android:lineSpacingMultiplier="0.9"
         android:text="@tools:sample/lorem"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/unfollow"
         app:layout_constraintStart_toEndOf="@+id/name"
@@ -57,6 +59,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spotify" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
