--- a/Trackify/app/src/main/res/navigation/playlist_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/playlist_navigation.xml
@@ -25,6 +25,10 @@
     <fragment
         android:id="@+id/navigation_details"
         android:name="com.apm.trackify.ui.playlist.details.PlaylistFragment"
-        tools:layout="@layout/playlists_details_fragment" />
+        tools:layout="@layout/playlists_details_fragment">
+        <action
+            android:id="@+id/back_navigation_landing"
+            app:popUpTo="@+id/navigation_landing" />
+    </fragment>
 
 </navigation>
