--- a/Trackify/app/src/main/res/values/colors.xml
+++ b/Trackify/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="launcher_background">#262833</color>
+
     <color name="placeholder_tint">#262626</color>
     <color name="placeholder_background">@android:color/system_notification_accent_color</color>
 </resources>
