--- a/Trackify/app/src/main/res/values/themes.xml
+++ b/Trackify/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.Trackify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/golden_poppy</item>
@@ -15,7 +15,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@color/raisin_black</item>
+<!--        <item name="android:windowBackground">@color/raisin_black</item>-->
         <item name="android:textColor">@color/white</item>
-   </style>
+    </style>
 </resources>
