--- a/Trackify/app/src/main/res/layout/routes_search_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_search_fragment.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toBottomOf="@+id/mapView" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView3"
+        android:id="@+id/rvPlaylistRoutes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
