--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -13,6 +13,11 @@
             android:id="@+id/action_routes_search_to_route_share"
             app:destination="@+id/routesShareFragment"
         />
+        <action
+            android:id="@+id/action_routes_search_to_playlist_details"
+            app:destination="@+id/navigation_details"
+        />
+
         android:label="routes_search_fragment"
         tools:layout="@layout/routes_search_fragment"
     </fragment>
@@ -23,5 +28,11 @@
         android:label="routes_share_fragment"
         tools:layout="@layout/routes_share_fragment"
     />
+
+    <fragment
+        android:id="@+id/navigation_details"
+        android:name="com.apm.trackify.ui.playlist.details.PlaylistFragment"
+        tools:layout="@layout/playlists_details_fragment">
+    </fragment>
 
 </navigation>
